--- a/pictures.html
+++ b/pictures.html
@@ -1,17 +1,17 @@
 ---
 title: Pictures
 ---
-<iframe
-src="https://www.flickr.com/photos/pikesley/15328457669/in/set-72157648082796646/player/"
-
-frameborder="0"
-allowfullscreen
-webkitallowfullscreen
-mozallowfullscreen
-oallowfullscreen
-msallowfullscreen>
-</iframe>
-
+<div class='embed-responsive embed-responsive-16by9'>
+  <iframe
+  src="https://www.flickr.com/photos/pikesley/15328457669/in/set-72157648082796646/player/"
+  frameborder="0"
+  allowfullscreen
+  webkitallowfullscreen
+  mozallowfullscreen
+  oallowfullscreen
+  msallowfullscreen>
+  </iframe>
+</div>
 <!--
 width="500"
 height="331"
