--- a/sounds.html
+++ b/sounds.html
@@ -2,10 +2,22 @@
 title: Sounds
 ---
 
-<iframe
-width="100%"
-height="350"
-scrolling="no"
-frameborder="no"
-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/43899857&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">
-</iframe>
+<div class="row">
+  {% for sound in site.data.sounds %}
+  <div class="col-md-4">
+    <div class='thumbnail'>
+      <div class='embed-responsive embed-responsive-4by3'>
+
+        <iframe class="embed-responsive-item"
+                width="100%"
+                height="450"
+                scrolling="no"
+                frameborder="no"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{sound.id}}&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
+                </iframe>
+                
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
