--- a/sounds.html
+++ b/sounds.html
@@ -8,14 +8,8 @@ title: Sounds
     <div class='thumbnail'>
       <div class='embed-responsive embed-responsive-4by3'>
 
-        <iframe class="embed-responsive-item"
-                width="100%"
-                height="450"
-                scrolling="no"
-                frameborder="no"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{sound.id}}&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
-                </iframe>
-                
+        {% include sound.html id=sound.id %}
+
       </div>
     </div>
   </div>
