--- a/sounds.html
+++ b/sounds.html
@@ -2,9 +2,9 @@
 title: Sounds
 ---
 
-<div class="row">
+<div class='row'>
   {% for sound in site.data.sounds %}
-  <div class="col-md-4">
+  <div class='col-md-4'>
     <div class='thumbnail'>
       <div class='embed-responsive embed-responsive-4by3'>
 
