--- a/the-band.html
+++ b/the-band.html
@@ -2,17 +2,17 @@
 title: The Band
 ---
 
-<div class="row">
+<div class='row'>
   {% for member in site.data.band %}
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="{{member.image}}" alt="{{member.name}}" title="{{member.name}}">
-      <div class="caption">
+  <div class='col-sm-6 col-md-4'>
+    <div class='thumbnail'>
+      <img src='{{member.image}}' alt='{{member.name}}' title='{{member.name}}'>
+      <div class='caption'>
         <h3>{{member.name}}</h3>
         <h4>{{member.instrument}}</h4>
         <p>{{member.bio}}</p>
         {% if member.twitter %}
-        <h4><a href="http://twitter.com/{{member.twitter}}">@{{member.twitter}}</a></h4>
+        <h4><a href='http://twitter.com/{{member.twitter}}'>@{{member.twitter}}</a></h4>
         {% endif %}
       </div>
     </div>
