--- a/the-band.html
+++ b/the-band.html
@@ -4,9 +4,9 @@ title: The Band
 
 <div class='row'>
   {% for member in site.data.band %}
-  <div class='col-sm-6 col-md-4'>
+  <div class='col-md-4'>
     <div class='thumbnail'>
-      <img src='{{member.image}}' alt='{{member.name}}' title='{{member.name}}'>
+      <img src='{{member.image}}' alt='{{member.name}}' title='{{member.name}}' class='thumb'>
       <div class='caption'>
         <h3>{{member.name}}</h3>
         <h4>{{member.instrument}}</h4>
