--- a/the-band.html
+++ b/the-band.html
@@ -10,7 +10,7 @@ title: The Band
       <div class='caption'>
         <h3>{{member.name}}</h3>
         <h4>{{member.instrument}}</h4>
-        <p>{{member.bio}}</p>
+    <!--    <p>{{member.bio}}</p> -->
         {% if member.twitter %}
         <h4><a href='http://twitter.com/{{member.twitter}}'>@{{member.twitter}}</a></h4>
         {% endif %}
