--- a/gigs.html
+++ b/gigs.html
@@ -3,14 +3,18 @@ title: Upcoming Gigs
 ---
 
 {% assign something = '' %}
-{% capture nowseconds %}{{'now' | date: '%s'}}{% endcapture %}
+{% capture nowseconds %}
+  {{ 'now' | date: '%s' }}
+{% endcapture %}
 
 {% for post in site.posts reversed %}
   {% capture postseconds %}{{ post.date | date: '%s' }}{% endcapture %}
   {% if nowseconds < postseconds %}
     {% capture something %}{{ 'true' }}{% endcapture %}
     <div class='post'>
-      <h3 class='title'>{{ post.date | date_to_long_string }}: <a href='{{ post.url }}'>{{ post.title }}</a></h3>
+      <h3 class='title'>{{ post.date | date_to_long_string }}:
+        <a href='{{ post.url }}'>{{ post.title }}</a>
+      </h3>
     </div>
   {% endif %}
 {% endfor %}
