--- a/gigs.html
+++ b/gigs.html
@@ -9,7 +9,7 @@ title: Upcoming Gigs
 
 {% for post in site.posts reversed %}
   {% capture postseconds %}{{ post.date | date: '%s' }}{% endcapture %}
-  {% if nowseconds < postseconds %}
+  {% if nowseconds > postseconds %}
     {% capture something %}{{ 'true' }}{% endcapture %}
     <div class='post'>
       <h3 class='title'>{{ post.date | date_to_long_string }}:
