Nicer Soundcloud layout

--- a/gigs.html
+++ b/gigs.html
@@ -16,6 +16,7 @@ title: Upcoming Gigs
         <a href='{{ post.url }}'>{{ post.title }}</a>
       </h3>
     </div>
+  </div>
   {% endif %}
 {% endfor %}
 
