This might be a terrible idea

--- a/gigs.html
+++ b/gigs.html
@@ -29,5 +29,8 @@ title: Upcoming Gigs
   If you'd like to book the band, please contact us on
   <a href='https://www.facebook.com/rawfunkmaharishi'>Facebook</a>
   or
-  <a href='https://twitter.com/uncookedfunk'>Twitter</a>.
+  <a href='https://twitter.com/uncookedfunk'>Twitter</a>,
+  or make a
+  <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/tree/master/gigs/_posts'>
+  pull-request on Github</a>.
 </h4>
