This might be a terrible idea

--- a/gigs.html
+++ b/gigs.html
@@ -31,6 +31,6 @@ title: Upcoming Gigs
   or
   <a href='https://twitter.com/uncookedfunk'>Twitter</a>,
   or make a
-  <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/tree/master/gigs/_posts'>
+  <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/gigs/_posts/HOW_TO_BOOK_THE_BAND.md'>
   pull-request on Github</a>.
 </h4>
