--- a/the-band.html
+++ b/the-band.html
@@ -7,7 +7,7 @@ title: The Band
   {% for member in site.data.band %}
   <div class='col-md-2'>
     <div class='thumbnail'>
-      <img src='/assets/images/{{ member.image }}' alt='{{ member.name }}' title='{{ member.name }}' class='thumb' />
+      <img src='/assets/images/the-band/{{ member.image }}' alt='{{ member.name }}' title='{{ member.name }}' class='thumb' />
       <div class='caption'>
         <h3 class='text-center'>{{ member.name }}</h3>
     <!--    <h4>{{ member.instrument }}</h4> -->
