Clean clean clean

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout:
+---
+
 <!DOCTYPE html>
 <html lang='en'>
   <head>
@@ -8,8 +12,12 @@
 
     <!-- Bootstrap -->
     <link rel='stylesheet' href='/assets/application.css' type='text/css' />
-    <link rel='stylesheet' href='/assets/splash.css' type='text/css' />
-
+    <style>
+      body {
+        background-image: url('/assets/images/backgrounds/background.png');
+        background-position: center;
+      }
+      </style>
     <link rel='icon' type='image/png' href='/assets/favicon.ico' />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
