--- a/gigs.html
+++ b/gigs.html
@@ -25,12 +25,4 @@ title: Upcoming Gigs
 </div>
 {% endif %}
 
-<h4>
-  If you'd like to book the band, please contact us on
-  <a href='https://www.facebook.com/rawfunkmaharishi'>Facebook</a>
-  or
-  <a href='https://twitter.com/uncookedfunk'>Twitter</a>,
-  or make a
-  <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/gigs/_posts/HOW_TO_BOOK_THE_BAND.md'>
-  pull-request on Github</a>.
-</h4>
+{% include book-us.html %}
