--- a/gigs.html
+++ b/gigs.html
@@ -24,7 +24,7 @@ title: Gigs
       {% endfor %}
       {% if something != 'true' %}
         <div class='post'>
-          <h3 class='title'>No Upcoming Shows</h3>
+          <h3 class='title'>No Upcoming Gigs</h3>
         </div>
       {% endif %}
     </div>
