--- a/pictures.html
+++ b/pictures.html
@@ -1,10 +1,13 @@
 ---
 title: Pictures
 ---
-<div class='thumbnail'>
+<div class='thumbnail flickr'>
   <div class='embed-responsive embed-responsive-16by9'>
-    <iframe src='https://www.flickr.com/photos/pikesley/15328457669/in/set-72157648082796646/player/'
+    <iframe src='https://www.flickr.com/photos/128943844@N06/15444839959/player/'
             allowfullscreen>
     </iframe>
   </div>
+  <p class='pull-right'>
+    Photos by <a href='http://www.kimberlycabbott.com/'>Kim</a>
+  </p>
 </div>
