--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ layout:
     <div class='container'>
       {% include navigation.html %}
 
-      <img src='/assets/images/logos/wide/banner.png' class='splash center-block'/>
+      <img src='/assets/images/logos/wide/banner.png' class='splash center-block hidden-xs hidden-sm'/>
+      <img src='/assets/images/logos/square/logo.png' class='splash center-block visible-xs visible-sm'/>
       <div class='row'>
         <div class='col-xs-0' 'col-md-4'></div>
         <div class='col-xs-12' 'col-md-8'>
