--- a/pictures.html
+++ b/pictures.html
@@ -1,13 +1,19 @@
 ---
 title: Pictures
 ---
-<div class='thumbnail flickr'>
-  <div class='embed-responsive embed-responsive-16by9'>
-    <iframe src='https://www.flickr.com/photos/128943844@N06/15444839959/player/'
-            allowfullscreen>
-    </iframe>
+<div class='row'>
+  <div class='col-md-2'></div>
+  <div class='col-md-8'>
+    <div class='thumbnail flickr'>
+      <div class='embed-responsive embed-responsive-16by9'>
+        <iframe src='https://www.flickr.com/photos/128943844@N06/15444839959/player/'
+                allowfullscreen>
+        </iframe>
+      </div>
+      <p class='pull-right'>
+        Photos by <a href='http://www.kimberlycabbott.com/'>Kim</a>
+      </p>
+    </div>
+    <div class='col-md-2'></div>
   </div>
-  <p class='pull-right'>
-    Photos by <a href='http://www.kimberlycabbott.com/'>Kim</a>
-  </p>
 </div>
