--- a/sounds.html
+++ b/sounds.html
@@ -6,16 +6,14 @@ title: Sounds
   {% include sound.html id = site.data.sounds.first.id width = 6 %}
   <div class='col-md-6'>
     <div class='row'>
-      {% assign id = site.data.sounds[1].id %}
-      {% include sound.html id = id width = 6 %}
-      {% assign id = site.data.sounds[2].id %}
-      {% include sound.html id = id width = 6 %}
+      {% for sound in site.data.sounds limit:2 offset:1 %}
+        {% include sound.html id = sound.id width = 6 %}
+      {% endfor %}
     </div>
     <div class='row'>
-      {% assign id = site.data.sounds[3].id %}
-      {% include sound.html id = id width = 6 %}
-      {% assign id = site.data.sounds[4].id %}
-      {% include sound.html id = id width = 6 %}
+      {% for sound in site.data.sounds limit:2 offset:3 %}
+        {% include sound.html id = sound.id width = 6 %}
+      {% endfor %}
     </div>
   </div>
 </div>
