--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout:
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
-    <title>{{ page.title }}</title>
+    <title>Raw Funk Maharishi</title>
 
     <!-- Bootstrap -->
     <link rel='stylesheet' href='/assets/application.css' type='text/css' />
