--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout:
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
-    <title>Raw Funk Maharishi</title>
+    <title>Raw Funk Maharish</title>
 
     <!-- Bootstrap -->
     <link rel='stylesheet' href='/assets/application.css' type='text/css' />
@@ -20,12 +20,7 @@ layout:
       </style>
     <link rel='icon' type='image/png' href='/assets/favicon.ico' />
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js'></script>
-      <script src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js'></script>
-    <![endif]-->
+    {% include ie-boilerplate.html %}
     {% include google-analytics.html %}
   </head>
   <body>
