--- a/index.html
+++ b/index.html
@@ -39,10 +39,6 @@ layout:
       </div>
     </div>
     {% include footer.html %}
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src='/javascript/bootstrap.js'></script>
+    {% include js-boilerplate.html %}
   </body>
 </html>
