--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ layout:
     <div class='container'>
       {% include navigation.html %}
 
-      <img src='/assets/images/logos/wide/banner.png' class='splash center-block hidden-xs hidden-sm'/>
-      <img src='/assets/images/logos/square/logo.png' class='splash center-block visible-xs visible-sm'/>
+      <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharish' class='splash center-block hidden-xs hidden-sm'/>
+      <img src='/assets/images/logos/square/logo.png' alt='Raw Funk Maharish' class='splash center-block visible-xs visible-sm'/>
       <div class='row'>
-        <div class='col-xs-0' 'col-md-4'></div>
-        <div class='col-xs-12' 'col-md-8'>
+        <div class='col-xs-0 col-md-4'></div>
+        <div class='col-xs-12 col-md-8'>
           <p class='splash pull-right'>
             Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams.
           </p>
