This is how we Flickr on gh-pages

--- a/pictures.html
+++ b/pictures.html
@@ -1,6 +1,9 @@
 ---
 title: Pictures
 ---
+
+<a href="https://www.flickr.com/photos/rawfunkmaharishi/15444839959" title="The Comedy, October 2014 by Raw Funk Maharishi, on Flickr"><img src="https://farm6.staticflickr.com/5598/15444839959_787064e003_m.jpg" width="240" height="160" alt="The Comedy, October 2014"></a>
+
 <div class='row'>
   <div class='col-md-2'></div>
   <div class='col-md-8'>
