--- a/pictures.html
+++ b/pictures.html
@@ -2,21 +2,13 @@
 title: Pictures
 ---
 
-<a href="https://www.flickr.com/photos/rawfunkmaharishi/15444839959" title="The Comedy, October 2014 by Raw Funk Maharishi, on Flickr"><img src="https://farm6.staticflickr.com/5598/15444839959_787064e003_m.jpg" width="240" height="160" alt="The Comedy, October 2014"></a>
-
 <div class='row'>
-  <div class='col-md-2'></div>
-  <div class='col-md-8'>
-    <div class='thumbnail flickr'>
-      <div class='embed-responsive embed-responsive-16by9'>
-        <iframe src='https://www.flickr.com/photos/128943844@N06/15444839959/player/'
-                allowfullscreen>
-        </iframe>
-      </div>
-      <p class='pull-right'>
-        Photos by <a href='http://www.kimberlycabbott.com/'>Kim</a>
-      </p>
+  {% for picture in site.data.pictures %}
+    <div class='col-md-3 thumbnail'>
+      <a href='{{ picture[":photo_page"] }}'>
+        <img src='{{ picture[":photo_url"] }}' />
+      </a>
     </div>
-    <div class='col-md-2'></div>
-  </div>
+    {% cycle '', '', '', "</div><div class='row'>" %}
+  {% endfor %}
 </div>
