--- a/pictures.html
+++ b/pictures.html
@@ -5,8 +5,8 @@ title: Pictures
 <div class='row'>
   {% for picture in site.data.pictures %}
     <div class='col-md-3 thumbnail flickr'>
-      <a href='{{ picture["photo_page"] }}'>
-        <img src='{{ picture["photo_url"] }}' />
+      <a href='{{ picture["photo_page"] }}' title='View full-size on Flickr'>
+        <img src='{{ picture["photo_url"] }}' alt='{{ picture['title'] }}'/>
       </a>
       <div class='caption'>
         <h1 class='text-center'>
