--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Raw Funk Maharish
-extra_styles: "body { background-image: url('/assets/images/backgrounds/background.png'); background-position: center }"
+extra_styles: "body { background-image: url('/assets/images/backgrounds/background.jpg'); background-position: center }"
 no_header: true
 no_title: true
 ---
