--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@ no_title: true
 ---
 
 {% include navigation.html %}
-<img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharish' class='splash center-block hidden-xs hidden-sm'/>
-<img src='/assets/images/logos/stacked/logo.png' alt='Raw Funk Maharish' class='splash center-block visible-xs-inline-block visible-sm-inline-block'/>
+<img src='/assets/images/logos/wide/banner.png'
+     alt='Raw Funk Maharish'
+     class='splash center-block hidden-xs hidden-sm'/>
+
+<img src='/assets/images/logos/stacked/logo.png'
+     alt='Raw Funk Maharish'
+     class='splash center-block visible-xs-inline-block visible-sm-inline-block'/>
+
 <p class='splash pull-right'>
   Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams.
 </p>
