--- a/404.html
+++ b/404.html
@@ -20,8 +20,7 @@ I want the P. Funk<br />\
 I want my funk uncut<br />\
 Make my funk the P. Funk<br />\
 I wants to get funked up</p>\
-<p class="pull-right">-- George Clinton</p>\
-<a href="/"><h2 class="text-center">Return to the One</h2></a>',
+<p class="pull-right">-- George Clinton</p>'
     i = 0,
     isTag,
     text;
