--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-title: No funk at this location
+title: This page is Devoid Of Funk
 permalink: /404.html
 ---
 
@@ -20,7 +20,8 @@ I want the P. Funk<br />\
 I want my funk uncut<br />\
 Make my funk the P. Funk<br />\
 I wants to get funked up</p>\
-<p class="pull-right">-- George Clinton</p>'
+<p class="text-right">-- George Clinton</p>\
+<a href="/"><h2 class="text-center">Get back on The One</h2></a>',
     i = 0,
     isTag,
     text;
