How to licensing

--- a/pictures.html
+++ b/pictures.html
@@ -22,6 +22,7 @@ title: Pictures
             </small>
           {% endif %}
         </h1>
+        <h2>License: <a href='{{ picture["license_url"]}}'>{{ picture['license']}}</a></h2>
       </div>
     </div>
     {% cycle '', '', '', "</div><div class='row'>" %}
