--- a/sounds.html
+++ b/sounds.html
@@ -10,7 +10,7 @@ title: Sounds
 </script>
 
 <div class='row'>
-  {% include hacky-sound.html id = site.data.sounds.first.id width = 6 %}
+  {% include sound.html id = site.data.sounds.first.id width = 6 %}
   <div class='col-md-6'>
     <div class='row'>
       {% for sound in site.data.sounds limit:2 offset:1 %}
