--- a/404.html
+++ b/404.html
@@ -26,6 +26,11 @@ I wants to get funked up</p>\
     isTag,
     text;
 
+var str = '<a href="/"><h2 class="text-center">Get back on The One</h2></a>',
+  i = 0,
+  isTag,
+  text;
+
 (function type() {
     text = str.slice(0, ++i);
     if (text === str) return;
