--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Raw Funk Maharish
+title: Raw Funk Maharishi
 extra_styles: "body { background-image: url('/assets/images/backgrounds/background.jpg'); background-position: center }"
 no_header: true
 no_title: true
