License versions FTW

--- a/sounds.html
+++ b/sounds.html
@@ -1,6 +1,7 @@
 ---
 title: Sounds
 license_these: tracks
+license_version: 3.0
 ---
 
 <script src="http://connect.soundcloud.com/sdk.js"></script>
