--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ permalink: /404.html
 
 <div class='row'>
   <div class='col-md-3'></div>
-  <div class='col-md-6' id='clinton'></div>
+  <div class='col-md-6' id='the-one'></div>
   <div class='col-md-3'></div>
 </div>
 
@@ -19,7 +19,7 @@ var str = '<a href="/"><h2 class="text-center">Get back on The One</h2></a>',
     text = str.slice(0, ++i);
     if (text === str) return;
 
-    document.getElementById('clinton').innerHTML = text;
+    document.getElementById('the-one').innerHTML = text;
 
     var char = text.slice(-1);
     if( char === '<' ) isTag = true;
