--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,11 @@
 ---
 title: Blog
 ---
-
 <div class='row'>
   <div class='col-md-2'></div>
     <div class='col-md-8'>
+      <h2 class='subtitle'>In which I record my adventures in building this site</h2>
+
       {% include blog_archive.html %}
     </div>
     <div class='col-md-2'></div>
