Style footer nicely

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Raw Funk Maharishi
 extra_styles: "body { background-image: url('/assets/images/backgrounds/background.jpg'); background-position: center }"
 no_header: true
 no_title: true
+trim_class: plain
 ---
 
 {% include navigation.html %}
