--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: Open Data
 <div class='row'>
   <div class='col-md-2'>
     <a href='http://creativecommons.org/licenses/by-sa/4.0/'>
-      <img src='/assets/images/badges/cc-by-sa.svg' />
+      <img src='/assets/images/badges/cc-by-sa.svg' alt='CC-BY-SA' title='CC-BY-SA' />
     </a>
   </div>
   <div class='col-md-10'>
