--- a/gigs.html
+++ b/gigs.html
@@ -7,6 +7,8 @@ title: Gigs
   {{ 'now' | date: '%s' }}
 {% endcapture %}
 
+{% include calendar-subscribe.html %}
+
 <div class='giglist'>
   <div class='row'>
 
