--- a/gigs.html
+++ b/gigs.html
@@ -15,7 +15,7 @@ title: Gigs
     <div class='col-md-2'></div>
     <div class='col-md-5'>
       <h2>Upcoming</h2>
-      {% for post in site.categories['gigs'] reversed %}
+      {% for post in site.categories.gigs reversed %}
         {% capture postseconds %}{{ post.date | date: '%s' }}{% endcapture %}
         {% capture future %}{{ nowseconds | minus:postseconds }}{% endcapture %}
         {% if future < '0' %}
@@ -32,7 +32,7 @@ title: Gigs
 
     <div class='col-md-4 gig-archive'>
       <h2>Archive</h2>
-      {% for post in site.categories['gigs'] %}
+      {% for post in site.categories.gigs %}
         {% capture postseconds %}{{ post.date | date: '%s' }}{% endcapture %}
         {% capture future %}{{ nowseconds | minus:postseconds }}{% endcapture %}
         {% if future > '0' %}
