--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@ trim_class: blog
     <div class='col-md-8'>
       <h2 class='subtitle'>In which I record my adventures in building this site</h2>
 
-      {% include blog_archive.html %}
+      {% include blog-archive.html %}
     </div>
     <div class='col-md-2'></div>
   </div>
