Link to bookings

--- a/gigs.html
+++ b/gigs.html
@@ -25,7 +25,7 @@ title: Gigs
       {% endfor %}
       {% if upcoming_gigs != 'true' %}
         <div class='post'>
-          <h3 class='title'>No Upcoming Gigs</h3>
+          <h3 class='title'>Nothing in the calendar. Why not <a href='/book-the-band/'>book us?</a></h3>
         </div>
       {% endif %}
     </div>
