--- a/feedback.html
+++ b/feedback.html
@@ -18,3 +18,7 @@ title: Some reviews we have received
   </div>
   <div class='col-md-3'></div>
 </div>
+
+<h4 class='text-center'>
+Please send us your feedback on <a href='https://twitter.com/uncookedfunk'>Twitter</a>, <a href='https://facebook.com/rawfunkmaharishi'>Facebook</a>, or via a <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/_data/reviews.yml'>Github pull-request</a>
+</h4>
