--- a/the-band.html
+++ b/the-band.html
@@ -7,7 +7,9 @@ title: The Band
     {% for member in site.data.band %}
       <div class='col-md-2'>
         <div class='thumbnail'>
-          <img src='/assets/images/the-band/{{ member.image }}' alt='{{ member.image_caption }}' title='{{ member.image_caption }}' class='thumb' />
+          <a href='{{ member.image_url }}'>
+            <img src='/assets/images/the-band/{{ member.image }}' alt='{{ member.image_caption }}' title='{{ member.image_caption }}' class='thumb' />
+          </a>
           <div class='caption'>
             <h1 class='text-center'>{{ member.name }}</h1>
           </div>
