--- a/feedback.html
+++ b/feedback.html
@@ -11,7 +11,7 @@ title: What people are saying about us
           '{{ review.quote }}'
         </dt>
         <dd>
-          -- {{ review.source }}{% if review.occasion %}, {{ review.occasion }}{% endif %} 
+          -- {{ review.source }}{% if review.occasion %}, {{ review.occasion }}{% endif %}
         </dd>
         {% if forloop.rindex0 > 0 %}
           <hr />
@@ -22,6 +22,6 @@ title: What people are saying about us
   <div class='col-md-3'></div>
 </div>
 
-<h4 class='text-center'>
+<h4 class='text-center call-for-feedback'>
 Please send us your feedback on <a href='https://twitter.com/uncookedfunk'>Twitter</a>, <a href='https://facebook.com/rawfunkmaharishi'>Facebook</a>, or via a <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/_data/reviews.yml'>Github pull-request</a>
 </h4>
