--- a/merchandise.html
+++ b/merchandise.html
@@ -3,7 +3,7 @@ title: Merchandise
 ---
 
 <p>
-You've seen our t-shirts at a gig and want one of your own? Well, the best we can currently offer is this:
+You've seen our t-shirts at a gig and want one? Well, the good new is, you can make your own!
 </p>
 
 <h2 class='text-center'>
