--- a/merchandise.html
+++ b/merchandise.html
@@ -14,12 +14,12 @@ We don't currently have the capacity to sell our t-shirts. However, the good new
   <div class='col-md-1'></div>
   <div class='col-md-7'>
     <a href='http://rawfunkmaharishi.uk/assets/images/logos/wide/banner.png'>
-      <img src='http://rawfunkmaharishi.uk/assets/images/logos/wide/banner.png' />
+      <img src='http://rawfunkmaharishi.uk/assets/images/logos/wide/banner.png' alt='Wide Banner' />
     </a>
   </div>
   <div class='col-md-3'>
     <a href='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png'>
-      <img src='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png' />
+      <img src='http://rawfunkmaharishi.uk/assets/images/logos/stacked/logo.png' alt='Wide Banner' />
     </a>
   </div>
   <div class='col-md-1'></div>
@@ -43,7 +43,7 @@ Then
     Select the logo you downloaded above
   </li>
   <li>
-    No, you don't to vectorise your image
+    No, you don't want to vectorise your image
   </li>
   <li>
     The image should now be there under 'Assets' on the right-hand side
