--- a/merchandise.html
+++ b/merchandise.html
@@ -57,5 +57,5 @@ Then
   If you do create some merch of your own, <em>please</em> send us a photo of you wearing it
 </p>
 <p>
-  Also, please not that we are not affiliated with Streetshirt in any way, we've just been extremely impressed with their rapid delivery of high-quality t-shirts
+  Also, please note that we are not affiliated with Streetshirt in any way, we've just been extremely impressed with their rapid delivery of high-quality t-shirts
 </p>
