--- a/merchandise.html
+++ b/merchandise.html
@@ -7,7 +7,7 @@ We don't currently have the capacity to sell our t-shirts. However, the good new
 </p>
 
 <h2 class='text-center'>
-  Download one of our logos
+  First, download one of our logos
 </h2>
 <h2 class='subtitle'>
   Logos are released under an <a href='https://creativecommons.org/licenses/by-nc-sa/4.0'>Attribution-NonCommercial-ShareAlike</a> license
