I AM IDIOT. AMA

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ no_title: true
 trim_class: plain
 ---
 
+{% include navigation.html with_circle = false %}
 <img src='/assets/images/logos/wide/banner.png'
      alt='Raw Funk Maharish'
      class='splash center-block hidden-xs hidden-sm'/>
