--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
-title: Open Data
 ---
 
+<h1 class='text-center'>Open Data</h1>
 <p>
   This site publishes data about Raw Funk Maharishi gigs, all as Open Data. This data is made available under a <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a>.</p>
 
@@ -15,3 +15,7 @@ title: Open Data
     {% include open-data-certificate.html %}
   </div>
 </div>
+<h1 class='text-center'>Licensing</h1>
+<p>
+  In addition, <em>all creative works</em> on this site, including <a href='/sounds'>audio</a>, <a href='/video'>video</a>, <a href='/pictures'>photos</a>, <a href='/merchandise'>logos</a> and copy (such as it is) are <a href='https://creativecommons.org/licenses/'>Creative Commons</a>-licensed. See individual pages or items for specific licensing terms
+</p>
