--- a/licensing.html
+++ b/licensing.html
@@ -9,7 +9,7 @@
 
 <h1 class='text-center'>Open Data</h1>
 <p>
-  In addition, this site publishes data about Raw Funk Maharishi <a href='/gigs'>gigs</a>, all as <a href='http://theodi.org/guides/what-open-data'>Open Data</a>. This data is made available under a <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a>.</p>
+  In addition, this site publishes data about Raw Funk Maharishi <a href='/gigs'>gigs</a> as <a href='http://theodi.org/guides/what-open-data'>Open Data</a>. This data is made available under a <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a>.</p>
 
 <div class='row'>
   <div class='col-md-12'>
