--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,8 @@
 ---
 title: Blog
 trim_class: blog
+license_these: blog posts
+license_version: 4.0
 ---
 <div class='row'>
   <div class='col-md-2'></div>
