Link to blog posts

--- a/licensing.html
+++ b/licensing.html
@@ -2,7 +2,7 @@
 ---
 <h1 class='text-center'>Open Content</h1>
 <p>
-  All creative works on this site, including <a href='/sounds'>audio</a>, <a href='/videos'>video</a>, <a href='/pictures'>photos</a>, <a href='/merchandise'>logos</a> and copy are <a href='https://creativecommons.org/licenses/'>Creative Commons</a>-licensed. See individual pages or items for specific licensing terms
+  All creative works on this site, including <a href='/sounds'>audio</a>, <a href='/videos'>video</a>, <a href='/pictures'>photos</a>, <a href='/merchandise'>logos</a> and <a href='/blog'>blog posts</a> are <a href='https://creativecommons.org/licenses/'>Creative Commons</a>-licensed. See individual pages or items for specific licensing terms
 </p>
 
 <hr />
