--- a/licensing.html
+++ b/licensing.html
@@ -2,21 +2,21 @@
 title: Licensing
 no_title: true
 ---
-<h1 class='text-center'>Open Content</h1>
+<h1 class='main-title'>Open Content</h1>
 <p>
   All creative works on this site, including <a href='/sounds'>audio</a>, <a href='/videos'>video</a>, <a href='/pictures'>photos</a>, <a href='/merchandise'>logos</a> and <a href='/blog'>blog posts</a> are <a href='https://creativecommons.org/licenses/'>Creative Commons</a>-licensed. See individual pages or items for specific licensing terms
 </p>
 
 <hr />
 
-<h1 class='text-center'>Open Source</h1>
+<h1 class='main-title'>Open Source</h1>
 <p>
   This site is built using the <a href='https://github.com/jekyll/jekyll/blob/master/LICENSE'>MIT-licensed</a> <a href='http://jekyllrb.com/'>Jekyll</a> framework, and styled with the help of the <a href='https://github.com/twbs/bootstrap/blob/master/LICENSE'>MIT-licensed</a> <a href='http://getbootstrap.com/'>Twitter Bootstrap</a>. The entire source is available (<a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io/blob/master/LICENSE.md'>MIT-licensed</a>) on <a href='https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io'>Github</a>
 </p>
 
 <hr />
 
-<h1 class='text-center'>Open Data</h1>
+<h1 class='main-title'>Open Data</h1>
 <p>
   In addition, this site publishes data about Raw Funk Maharishi <a href='/gigs'>gigs</a> as <a href='http://theodi.org/guides/what-open-data'>Open Data</a>. This data is made available under a <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons Attribution Share-alike license</a></p>
 
