Less of the CAPS EVERYWHERE

--- a/feedback.html
+++ b/feedback.html
@@ -11,7 +11,7 @@ title: What people are saying about us
           '{{ review.quote }}'
         </dt>
         <dd>
-          -- {{ review.source }}{% if review.occasion %}, {{ review.occasion }}{% endif %}
+          -- {{ review.source }}
         </dd>
         {% if forloop.rindex0 > 0 %}
           <hr />
