--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ trim_class: blog
 license_these: blog posts
 license_version: 4.0
 ---
-<div class='row'>
+<div class='row blog-page'>
   <div class='col-md-2'></div>
   <div class='col-md-8'>
     <h2 class='subtitle'>In which I record my adventures in building this site</h2>
