--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@ trim_class: plain
      class='splash center-block visible-xs-inline-block visible-sm-inline-block'/>
 
 <p class='splash pull-right'>
-  Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams.
+  Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
 </p>
