--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ extra_styles: "body { background-image: url('/assets/images/backgrounds/backgrou
 no_header: true
 no_title: true
 trim_class: plain
+with_nav: true
 ---
 
-{% include navigation.html with_circle = false %}
 <img src='/assets/images/logos/wide/banner.png'
      alt='Raw Funk Maharish'
      class='splash center-block hidden-xs hidden-sm'/>
