--- a/the-band.html
+++ b/the-band.html
@@ -7,16 +7,27 @@ title: The Band
     {% for member in site.data.band %}
       <div class='col-md-2'>
         <div class='thumbnail band-member'>
-          <a href='{{ member.image_url }}'>
-            <img src='/assets/images/the-band/{{ member.image }}' alt='{{ member.image_caption }}' title='{{ member.image_caption }}' class='thumb' />
-          </a>
+          <img src='/assets/images/the-band/{{ member.image }}' alt='{{ member.image_caption }}' title='{{ member.image_caption }}' class='thumb' />
           <div class='caption'>
             <h1 class='text-center'>{{ member.name }}</h1>
+
             {% if member.twitter %}
               <h2 class='text-center twitter'>
                 <a href='https://twitter.com/{{ member.twitter }}' alt='{{ member.name }} on Twitter' title='{{ member.name }} on Twitter'>@{{ member.twitter }}</a>
               </h2>
             {% endif %}
+
+            {% if member['photographer'] %}
+              {% assign key = member['photographer'] %}
+              {% assign url = site.data.photographers[key]['website'] %}
+              <h3>
+                Photo by
+                <a href='{{ url }}'>
+                  {{ member['photographer'] | capitalize }}
+                </a>. License: <a href='{{ member["license_url"]}}'>{{ member['license']}}</a>
+              </h3>
+            {% endif %}
+
           </div>
           {% if forloop.rindex0 > 0 %}
             <hr class='hidden-md hidden-lg visible-sm visible-xs' />
