--- a/blog.html
+++ b/blog.html
@@ -4,12 +4,12 @@ trim_class: blog
 license_these: blog posts
 license_version: 4.0
 ---
-<div class='row blog-page'>
+<div class='row'>
   <div class='col-md-2'></div>
   <div class='col-md-8'>
     <h2 class='subtitle'>In which I record my adventures in building this site</h2>
 
-    {% include blog-archive.html %}
+    {% include blog-archive.html with_caps = true %}
   </div>
   <div class='col-md-2'></div>
 </div>
